<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="biz.ftsdesign.paranoiddiary.MainActivity">
    <item
        android:id="@+id/action_toggle_lock"
        android:orderInCategory="100"
        android:title="@string/unlock"
        android:icon="@drawable/ic_action_key"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/action_filter_tags"
                android:icon="@drawable/ic_action_tag"
                android:orderInCategory="100"
                android:title=""/>
            <item
                android:id="@+id/action_clear_filter"
                android:orderInCategory="100"
                android:title="@string/action_clear_filter"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_tag"
        android:orderInCategory="100"
        android:title="@string/action_tag"
        android:icon="@drawable/ic_action_tag"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
