<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:id="@+id/TextView_OutputFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_output_format"
        android:textSize="@dimen/base_font_size"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_format"
        android:entries="@array/backup_formats_array"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TextView_Pwd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_password"
        android:textSize="@dimen/base_font_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditText_Pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="@dimen/base_font_size" />

    <TextView
        android:id="@+id/TextView_Pwd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_password2"
        android:textSize="@dimen/base_font_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditText_Pwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="@dimen/base_font_size" />

    <TextView
        android:id="@+id/TextView_PwdProblem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/base_font_size"
        android:textStyle="bold" />
</LinearLayout>